--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
 ---
 layout: default
-title: Adam Lopez
+title: Yongbo Wang
 picture: nike
 ---
 <div class="page-header">
   <div class="row">
     <div class="col-sm-12">
-      <h3>Adam Lopez</h3>
+      <h3>Yongbo Wang</h3>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-6">
       <address>
-        <a href="https://en.wikipedia.org/wiki/Reader_(academic_rank)">Reader</a><br/>
-        <a href="http://www.ilcc.inf.ed.ac.uk/">Institute for Language, Cognition and Computation</a><br/>
-        <a href="http://www.ed.ac.uk/schools-departments/informatics/">School of Informatics</a><br/>
-        <a href="http://www.ed.ac.uk/home">University of Edinburgh</a><br/>
+        <a href="http://www.cs.cqu.edu.cn/">College of Computer Science</a><br/>
+        <a href="http://english.cqu.edu.cn/">Chongqing University</a><br/>
+        <a href="https://en.wikipedia.org/wiki/Chongqing">Shapingba District, Chongqing, China</a><br/>
       </address>
     </div>
     <div class="col-sm-4">
-      <a href="mailto:alopez@inf.ed.ac.uk"><span class="glyphicon glyphicon-envelope"></span></a> Email<br/>
-      <a href="tel:+44-1316504430"><span class="glyphicon glyphicon-phone"></span>+44 131 650 4430</a><br/>
-      <a href="http://scholar.google.com/citations?user=u4sxKZwAAAAJ">
-        <img src="img/ico/gs.png" alt=""/>
-      </a> Google Scholar<br/>
-      <a href="http://github.com/alopez">
+      <a href="mailto:yongbowin@outlook.com"><span class="glyphicon glyphicon-envelope"></span></a> Email: yongbowin@outlook.com<br/>
+      <a href="tel:+86-13637995210"><span class="glyphicon glyphicon-phone"></span>+86 136 3799 5210</a><br/>
+      <a href="http://www.linkedin.com/in/yongbo-wang/">
+        <img src="img/ico/linkedin.png" alt=""/>
+      </a> LinkedIn<br/>
+      <a href="http://github.com/yongbowin">
         <img src="img/ico/github_icon.png" alt=""/>
       </a> Github
     </div>
@@ -32,16 +31,7 @@ picture: nike
 </div>
 
 <p>
-I develop computational models of natural language learning, 
-understanding and generation in people and machines, and my research 
-focuses on basic scientific, mathematical, and engineering problems 
-related to these models. I am especially interested in models 
-that handle the diversity of morphological, syntactic, and semantic 
-phenomena across the world’s languages. 
-<a href="collaborators.html">My research group</a> is part of the larger 
-<a href="http://groups.inf.ed.ac.uk/edinburghnlp/">Edinburgh NLP group</a>, 
-and we collaborate with many people in Edinburgh and more widely. If you 
-are interested in <a href="join.html">joining us</a>, please get in touch!
+Machine Learning and Natural Language Processing (NLP) professional with over 1 year of internship experience. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. Title of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a>. Strong background in programming.
 </p>
 
 <h4>Recent Highlights</h4>
