--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ picture: nike
       <a href="tel:+86-13637995210"><span class="glyphicon glyphicon-phone"></span>+86 136 3799 5210</a><br/>
       <a href="http://www.linkedin.com/in/yongbo-wang/">
         <img src="img/ico/linkedin.png" alt=""/>
-      </a> LinkedIn<br/>
+       LinkedIn</a><br/>
     </div>
   </div>
 </div>
