--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@ picture: nike
 Machine Learning and Natural Language Processing (NLP) professional with over 1 year of internship experience. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. Title of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a>. Strong background in programming.
 </p>
 
+<h4>Biography</h4>
+<p>
+I'm a M.S. student at the Department of Computer Science and Technology, Chongqing University (CQU), under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since Fall 2015. Previously, I received my bachelor degree in Chongqing University (CQU) in June, 2015.
+
+My research interests include natural language processing, machine learning and deep learning.
+</p>
+
 <h4>Recent Highlights</h4>
 {% for post in site.papers %}
   {% if post.selected %}
