--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Yongbo Wang | Papers &amp; Talks
+title: Yongbo Wang | Publications
 picture: levitated-mass
 ---
 <div class="page-header">
@@ -9,6 +9,6 @@ picture: levitated-mass
 </div>
 
 {% for post in site.papers %}
-  {% include paper.html paper=post %}
+  {% include publications.html paper=post %}
 {% endfor %}
 
