--- a/index.html
+++ b/index.html
@@ -42,5 +42,7 @@ My research interests include natural language processing, machine learning and 
 {% for post in site.papers %}
   {% include publications.html paper=post %}
 {% endfor %}
-
+{% for post in site.papers %}
+  {% include publications.html paper=post %}
+{% endfor %}
 
