--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@ My research interests include natural language processing, machine learning and 
 
 <h4>Recent Highlights</h4>
 {% for post in site.papers %}
-
+  {% include publications.html paper=post %}
 {% endfor %}
 
