--- a/papers.html
+++ b/papers.html
@@ -9,6 +9,6 @@ picture: levitated-mass
 </div>
 
 {% for post in site.papers %}
-  {% include papers.html paper=post %}
+  {% include paper.html paper=post %}
 {% endfor %}
 
