--- a/index.html
+++ b/index.html
@@ -29,15 +29,33 @@ picture: nike
 
 <h4>Biography</h4>
 <p>
-I'm a M.S. student at the Department of Computer Science and Technology, Chongqing University (CQU), under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since Fall 2015. Previously, I received my bachelor degree in Chongqing University (CQU) in June, 2015.
-<br/>
-My research interests include natural language processing, machine learning and deep learning.
+I'm a M.S. student at the 
+<a href="http://www.cs.cqu.edu.cn/">Department of Computer Science and Technology</a>, 
+<a href="http://english.cqu.edu.cn/">Chongqing University (CQU)</a>, under the supervision of Prof. 
+<a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since Fall 2015. Previously, I received my bachelor degree in Chongqing University (CQU) in June, 2015.
 </p>
+
+<h4>Research Interests</h4>
+<P>
+My research interests include natural language processing, machine learning and deep learning.
+</P>
 
 <h4>Recent Highlights</h4>
 {% for post in site.papers %}
   {% include paper.html paper=post %}
 {% endfor %}
+
+<h4>Experience</h4>
+<p>
+Research Intern | Aizhihui Technology Co., Ltd., Shenzhen, China<br/>
+Topic: Machine Learning and NLP<br/>
+Jul 2016 - present
+
+Intern | Chongqing Lingdao Technology Co. Ltd., Chongqing, China<br/>
+Topic: Web Developer<br/>
+Jul 2015 - Oct 2015
+</p>
+
 
 <h4>Awards</h4>
 <ul>
