--- a/index.html
+++ b/index.html
@@ -35,28 +35,34 @@ I'm a M.S. student at the
 <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since Fall 2015. Previously, I received my bachelor degree in Chongqing University (CQU) in June, 2015.
 </p>
 
+<br/>
 <h4>Research Interests</h4>
 <P>
 My research interests include natural language processing, machine learning and deep learning.
 </P>
 
+<br/>
 <h4>Recent Highlights</h4>
 {% for post in site.papers %}
   {% include paper.html paper=post %}
 {% endfor %}
 
+<br/>
 <h4>Experience</h4>
-<p>
-Research Intern | Aizhihui Technology Co., Ltd., Shenzhen, China<br/>
-Topic: Machine Learning and NLP<br/>
-Jul 2016 - present
+<ul>
+  <li>
+    Research Intern | <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a>, Shenzhen, China<br/>
+    Topic: Machine Learning and NLP<br/>
+    Jul 2016 - present
+  </li>
+  <li>
+    Intern | Chongqing Lingdao Technology Co. Ltd., Chongqing, China<br/>
+    Topic: Web Developer<br/>
+    Jul 2015 - Oct 2015
+  </li>
+</ul>
 
-Intern | Chongqing Lingdao Technology Co. Ltd., Chongqing, China<br/>
-Topic: Web Developer<br/>
-Jul 2015 - Oct 2015
-</p>
-
-
+<br/>
 <h4>Awards</h4>
 <ul>
   <li>2nd prize Scholarship, Chongqing University, 2016.</li>
@@ -65,6 +71,7 @@ Jul 2015 - Oct 2015
   <li>2nd prize Scholarship, Chongqing University (2012).</li>
 </ul>
 
+<br/>
 <h4>Personal</h4>
 <p>
 Machine Learning and Natural Language Processing (NLP) professional with over 1 year of internship experience. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. Title of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a>. Strong background in programming.
