--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@ I'm a M.S. student at the
 <a href="http://english.cqu.edu.cn/">Chongqing University (CQU)</a>, under the supervision of Prof. 
 <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since Fall 2015. Previously, I received my bachelor degree in Chongqing University (CQU) in June, 2015.
 </p>
+<p>
+<a href="CV/CV_Yongbo Wang.pdf"><strong>Yongbo's Curriculum Vitae.</strong></a>
+</p>
 
-<br/>
 <h4>Research Interests</h4>
 <P>
 My research interests include natural language processing, machine learning and deep learning.
 </P>
 
-<br/>
 <h4>Recent Highlights</h4>
 {% for post in site.papers %}
   {% include paper.html paper=post %}
 {% endfor %}
 
-<br/>
 <h4>Experience</h4>
 <ul>
   <li>
@@ -62,16 +62,14 @@ My research interests include natural language processing, machine learning and 
   </li>
 </ul>
 
-<br/>
 <h4>Awards</h4>
 <ul>
-  <li>2nd prize Scholarship, Chongqing University, 2016.</li>
+  <li>2nd prize Scholarship, Chongqing University (2016).</li>
   <li>2nd prize, Chongqing Division, China Undergraduate Mathematical Contest in Modeling (2013).</li>
   <li>National Endeavor Scholarship (top 5%) (2012).</li>
   <li>2nd prize Scholarship, Chongqing University (2012).</li>
 </ul>
 
-<br/>
 <h4>Personal</h4>
 <p>
 Machine Learning and Natural Language Processing (NLP) professional with over 1 year of internship experience. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. Title of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a>. Strong background in programming.
