--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ picture: nike
 <div class="page-header">
   <div class="row">
     <div class="col-sm-12">
-      <h3>Yongbo Wang</h3>
+      <h3>Yongbo Wang (<span style="font-family: 'KaiTi'">王勇博</span>)</h3>
     </div>
   </div>
   <div class="row">
