--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ picture: nike
 <div class="page-header">
   <div class="row">
     <div class="col-sm-12">
-      <h3>Yongbo Wang (<span style="font-family: 'LiSu'">王勇博</span>)(<span style="font-family: 'STXingkai'">王勇博</span>)</h3>
+      <h3>Yongbo Wang (<span style="font-family: 'STXingkai'; font-size: 28px;">王勇博</span>)</h3>
     </div>
   </div>
   <div class="row">
