--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ picture: nike
 <div class="page-header">
   <div class="row">
     <div class="col-sm-12">
-      <h3>Yongbo Wang (<span style="font-family: 'STXingkai'; font-size: 28px;">王勇博</span>)</h3>
+      <h3>
+        <strong>Yongbo Wang</strong> (<span style="font-family: 'STXingkai'; font-size: 28px;">王勇博</span>)
+      </h3>
     </div>
   </div>
   <div class="row">
@@ -27,7 +29,7 @@ picture: nike
   </div>
 </div>
 
-<h4>Biography</h4>
+<h4><strong>Biography</strong></h4>
 <p>
 I'm a M.S. student at the 
 <a href="http://www.cs.cqu.edu.cn/">Department of Computer Science and Technology</a>, 
@@ -38,17 +40,17 @@ I'm a M.S. student at the
 <a href="CV/CV_Yongbo Wang.pdf"><strong>Yongbo's Curriculum Vitae.</strong></a>
 </p>
 
-<h4>Research Interests</h4>
+<h4><strong>Research Interests</strong></h4>
 <P>
 My research interests include natural language processing, machine learning and deep learning.
 </P>
 
-<h4>Recent Highlights</h4>
+<h4><strong>Recent Highlights</strong></h4>
 {% for post in site.papers %}
   {% include paper.html paper=post %}
 {% endfor %}
 
-<h4>Experience</h4>
+<h4><strong>Experience</strong></h4>
 <ul>
   <li>
     Research Intern | <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a>, Shenzhen, China<br/>
@@ -62,7 +64,7 @@ My research interests include natural language processing, machine learning and 
   </li>
 </ul>
 
-<h4>Awards</h4>
+<h4><strong>Awards</strong></h4>
 <ul>
   <li>2nd prize Scholarship, Chongqing University (2016).</li>
   <li>2nd prize, Chongqing Division, China Undergraduate Mathematical Contest in Modeling (2013).</li>
@@ -70,7 +72,7 @@ My research interests include natural language processing, machine learning and 
   <li>2nd prize Scholarship, Chongqing University (2012).</li>
 </ul>
 
-<h4>Personal</h4>
+<h4><strong>Personal</strong></h4>
 <p>
 Machine Learning and Natural Language Processing (NLP) professional with over 1 year of internship experience. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. Title of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a>. Strong background in programming.
 </p>
