--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@ layout: default
 title: Yongbo Wang
 picture: nike
 ---
+
+<style>
+  h4 {
+    color: #527bbd;
+    margin-top: 0.7em;
+    margin-bottom: 0.3em;
+    padding-bottom: 0.2em;
+    line-height: 1.0;
+    padding-top: 0.5em;
+    border-bottom: 1px solid #aaaaaa;
+    font-weight: normal;
+  }
+</style>
+
 <div class="page-header">
   <div class="row">
     <div class="col-sm-12">
@@ -64,7 +78,7 @@ My research interests include natural language processing, machine learning and 
   </li>
 </ul>
 
-<h4><strong>Awards</strong></h4>
+<h4><strong>Awards</h4>
 <ul>
   <li>2nd prize Scholarship, Chongqing University (2016).</li>
   <li>2nd prize, Chongqing Division, China Undergraduate Mathematical Contest in Modeling (2013).</li>
@@ -72,7 +86,7 @@ My research interests include natural language processing, machine learning and 
   <li>2nd prize Scholarship, Chongqing University (2012).</li>
 </ul>
 
-<h4><strong>Personal</strong></h4>
+<h4>Personal</h4>
 <p>
 Machine Learning and Natural Language Processing (NLP) professional with over 1 year of internship experience. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. Title of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a>. Strong background in programming.
 </p>
