--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Yongbo Wang
 picture: nike
 ---
 
-<style>
+<style type="text/css">
   h4 {
     color: #527bbd;
     margin-top: 0.7em;
@@ -54,6 +54,7 @@ I'm a M.S. student at the
 <a href="CV/CV_Yongbo Wang.pdf"><strong>Yongbo's Curriculum Vitae.</strong></a>
 </p>
 
+<h4>Research Interests</h4>
 <h4><strong>Research Interests</strong></h4>
 <P>
 My research interests include natural language processing, machine learning and deep learning.
