--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@ picture: nike
     padding-bottom: 0.2em;
     line-height: 1.0;
     padding-top: 0.5em;
-    border-bottom: 1px solid #aaaaaa;
+    border-bottom: 1px solid #eee;
     font-weight: normal;
+  }
+  h3 {
+    color: #527bbd;
   }
 </style>
 
@@ -43,7 +46,7 @@ picture: nike
   </div>
 </div>
 
-<h4><strong>Biography</strong></h4>
+<h4>Biography</h4>
 <p>
 I'm a M.S. student at the 
 <a href="http://www.cs.cqu.edu.cn/">Department of Computer Science and Technology</a>, 
@@ -55,7 +58,6 @@ I'm a M.S. student at the
 </p>
 
 <h4>Research Interests</h4>
-<h4><strong>Research Interests</strong></h4>
 <P>
 My research interests include natural language processing, machine learning and deep learning.
 </P>
@@ -79,7 +81,7 @@ My research interests include natural language processing, machine learning and 
   </li>
 </ul>
 
-<h4><strong>Awards</h4>
+<h4>Awards</h4>
 <ul>
   <li>2nd prize Scholarship, Chongqing University (2016).</li>
   <li>2nd prize, Chongqing Division, China Undergraduate Mathematical Contest in Modeling (2013).</li>
