--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@ picture: nike
     padding-bottom: 0.2em;
     line-height: 1.0;
     padding-top: 0.5em;
-    border-bottom: 1px solid #eee;
+    /* border-bottom: 1px solid #eee; */
     font-weight: normal;
   }
   h3 {
     color: #527bbd;
+  }
+  .color-blue {
+    color: #224b8d;
   }
 </style>
 
@@ -62,21 +65,22 @@ I'm a M.S. student at the
 My research interests include natural language processing, machine learning and deep learning.
 </P>
 
-<h4><strong>Recent Highlights</strong></h4>
+<h4>Recent Highlights</h4>
 {% for post in site.papers %}
   {% include paper.html paper=post %}
 {% endfor %}
 
-<h4><strong>Experience</strong></h4>
+<h4>Experience</h4>
 <ul>
   <li>
-    Research Intern | <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a>, Shenzhen, China<br/>
-    Topic: Machine Learning and NLP<br/>
+    <span class="color-blue">Research Intern |</span> 
+    <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a>, Shenzhen, China<br/>
+    <strong>Topic:</strong> Machine Learning and NLP<br/>
     Jul 2016 - present
   </li>
   <li>
-    Intern | Chongqing Lingdao Technology Co. Ltd., Chongqing, China<br/>
-    Topic: Web Developer<br/>
+    <span class="color-blue">Intern |</span> Chongqing Lingdao Technology Co. Ltd., Chongqing, China<br/>
+    <strong>Topic:</strong> Web Developer<br/>
     Jul 2015 - Oct 2015
   </li>
 </ul>
