--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ picture: nike
   }
   .color-blue {
     color: #224b8d;
+    font-weight: bold;
   }
 </style>
 
@@ -57,7 +58,7 @@ I'm a M.S. student at the
 <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since Fall 2015. Previously, I received my bachelor degree in Chongqing University (CQU) in June, 2015.
 </p>
 <p>
-<a href="CV/CV_Yongbo Wang.pdf"><strong>Yongbo's Curriculum Vitae.</strong></a>
+<a href="CV/CV_Yongbo Wang.pdf"><strong class="color-blue">Yongbo's Curriculum Vitae.</strong></a>
 </p>
 
 <h4>Research Interests</h4>
