--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ My research interests include natural language processing, machine learning and 
 </P>
 
 <h4>Recent Highlights</h4>
+<blockquote>
+Note: both <i>Yongbo Wang<i> and YongBuo Wang are my names.
+</blockquote>
 {% for post in site.papers %}
   {% include paper.html paper=post %}
 {% endfor %}
