--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ My research interests include natural language processing, machine learning and 
 
 <h4>Recent Highlights</h4>
 <blockquote>
-Note: both <i>Yongbo Wang<i> and YongBuo Wang are my names.
+Note: both <i>Yongbo Wang</i> and <i>YongBuo Wang</i> are my names.
 </blockquote>
 {% for post in site.papers %}
   {% include paper.html paper=post %}
