--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ picture: nike
   <div class="row">
     <div class="col-sm-6">
       <address>
+        <a href="http://www.cs.cqu.edu.cn/">School of Software Theory and Technology Chongqing Key Lab</a><br/>
         <a href="http://www.cs.cqu.edu.cn/">College of Computer Science</a><br/>
         <a href="http://english.cqu.edu.cn/">Chongqing University</a><br/>
         <a href="https://en.wikipedia.org/wiki/Chongqing">Shapingba District, Chongqing, China</a><br/>
@@ -57,12 +58,13 @@ Note: both <i>Yongbo Wang</i> and <i>YongBuo Wang</i> are my names.
 <ul>
   <li>
     <span class="color-blue">Research Intern |</span> 
-    <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a>, Shenzhen, China<br/>
+    <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a>
+    <span class="color-blue">, Shenzhen, China</span><br/>
     <strong>Topic:</strong> Machine Learning and NLP<br/>
     Jul 2016 - present
   </li>
   <li>
-    <span class="color-blue">Intern |</span> Chongqing Lingdao Technology Co. Ltd., Chongqing, China<br/>
+    <span class="color-blue">Intern | Chongqing Lingdao Technology Co. Ltd., Chongqing, China</span><br/>
     <strong>Topic:</strong> Web Developer<br/>
     Jul 2015 - Oct 2015
   </li>
