--- a/projects.html
+++ b/projects.html
@@ -4,20 +4,62 @@ title: Yongbo Wang | projects
 picture: nike
 ---
 <div class="page-header">
-  <h3>Teaching</h3>
+  <h3>Projects</h3>
   <blockquote><i>Work well with a multi-cultural and diverse work force. Initiative, independent and good communication skill．</i></blockquote>
 </div>
 
 <h4>Machine Learning and NLP Intern</h4>
 <dl class="dl-horizontal">
-  <dt>Autumn 2016</dt><dd><a href="http://www.inf.ed.ac.uk/teaching/courses/inf2a/">Informatics 2A: Processing Formal and Natural Languages</a></dd>
-  <dt>Spring 2015, 16, &amp; 17</dt><dd><a href="http://www.inf.ed.ac.uk/teaching/courses/mt/">INFR11062 Machine translation</a></dd>
+  <dt>May 2017, Jul 2017</dt>
+  <dd>
+  	The Chaorder System<br/>
+	Provide Chinese and English event query, A stock market fluctuation, income risk analysis for the B end users, extracting information of subject, predicate, object and time from news. This project Uses NLP, Machine Learning, Word2Vec and ECKGs technologies.
+  </dd>
+  <dt>Feb 2017, May 2017</dt>
+  <dd>
+  	A chinese version of ECKGs<br/>
+	According to the English ECKGs framework, our group have developed a Chinese version. Using Ltp's open source framework, machine learning and deep learning technology, and the final output of three tuples achieved good results.
+  </dd>
+  <dt>Aug 2016, Sep 2016</dt>
+  <dd>
+  	The AITouJiang based Wechat Official Account<br/>
+  	From drawing up a plan, requirements analysis, prototype design, programming and testing up to deployed.
+  </dd>
 </dl>
+
 <h4>Web Developer Intern</h4>
 <dl class="dl-horizontal">
-  <dt>Spring 2012 and 2014</dt><dd><a href="http://mt-class.org/jhu-2014/">EN 600.468 Machine Translation</a></dd>
-  <dt>Fall 2013, Spring 2014</dt><dd><a href="https://piazza.com/jhu/fall2013/en600771/home">EN 600.771 Probability on Strings, Trees, and Sequences</a></dd>
-  <dt>From 2012 to 2014</dt><dd><a href="http://www.clsp.jhu.edu/seminars/">EN 520.702 Current Topics in Language and Speech Processing</a>, aka the CLSP seminar</dd>
+  <dt>Oct 2015</dt>
+  <dd>
+  	Music Album project<br/>
+  	Users upload albums of their own, and the system automatically generates albums with background music, all of which are customizable.
+  </dd>
+  <dt>Sep 2015</dt>
+  <dd>
+  	Holiday bargaining program project<br/>
+  	Through WeChat, the buyers forward the program to their friends, who need clicking the button to bargain for the specified item, and the program cuts out part of the price at random.
+  </dd>
+  <dt>Jul 2015, Aug 2015</dt>
+  <dd>
+  	The ChunJi Micro Mall project<br/>
+  	It’s a mall system, developed using the Struts2 and JDBC framework. Through collaboration, work with another to complete the development.
+  </dd>
+</dl>
+
+<h4>Other Projects</h4>
+<dl class="dl-horizontal">
+  <dt>Apr 2016, May 2016</dt>
+  <dd>
+  	The WeChat Medical System project
+  </dd>
+  <dt>Apr 2016</dt>
+  <dd>
+  	Teaching Management System project
+  </dd>
+  <dt>Jul 2015, Sep 2015</dt>
+  <dd>
+  	The Power Construction Corporation of Chongqing project
+  </dd>
 </dl>
   
 
