--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@ Note: both <i>Yongbo Wang</i> and <i>YongBuo Wang</i> are my names.
 <h4>Experience</h4>
 <ul>
   <li>
-    <span class="color-blue">Research Intern |</span> 
-    <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a>
-    <span class="color-blue">, Shenzhen, China</span><br/>
+    <span class="color-blue">Research Intern | 
+    <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a>, Shenzhen, China</span><br/>
     <strong>Topic:</strong> Machine Learning and NLP<br/>
     Jul 2016 - present
   </li>
