--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ I'm a M.S. student at the
 <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since Fall 2015. Previously, I received my bachelor degree in Chongqing University (CQU) in June, 2015.
 </p>
 <p>
-<a href="CV/CV_Yongbo Wang.pdf"><strong class="color-blue">Yongbo's Curriculum Vitae.</strong></a>
+<a href="CV/CV_Yongbo Wang.pdf"><strong class="color-blue">My Resume/CV.</strong></a>
 </p>
 
 <h4>Research Interests</h4>
