--- a/projects.html
+++ b/projects.html
@@ -12,17 +12,17 @@ picture: nike
 <dl class="dl-horizontal">
   <dt>May 2017, Jul 2017</dt>
   <dd>
-  	The Chaorder System<br/>
+  	<i>The Chaorder System</i><br/>
 	Provide Chinese and English event query, A stock market fluctuation, income risk analysis for the B end users, extracting information of subject, predicate, object and time from news. This project Uses NLP, Machine Learning, Word2Vec and ECKGs technologies.
   </dd>
   <dt>Feb 2017, May 2017</dt>
   <dd>
-  	A chinese version of ECKGs<br/>
+  	<i>A chinese version of <a href="http://www.newsreader-project.eu/results/software/">ECKGs</a></i><br/>
 	According to the English ECKGs framework, our group have developed a Chinese version. Using Ltp's open source framework, machine learning and deep learning technology, and the final output of three tuples achieved good results.
   </dd>
   <dt>Aug 2016, Sep 2016</dt>
   <dd>
-  	The AITouJiang based Wechat Official Account<br/>
+  	<i>The AITouJiang based <a href="https://admin.wechat.com/">Wechat Official Account</a></i><br/>
   	From drawing up a plan, requirements analysis, prototype design, programming and testing up to deployed.
   </dd>
 </dl>
@@ -31,17 +31,17 @@ picture: nike
 <dl class="dl-horizontal">
   <dt>Oct 2015</dt>
   <dd>
-  	Music Album project<br/>
+  	<i>Music Album project</i><br/>
   	Users upload albums of their own, and the system automatically generates albums with background music, all of which are customizable.
   </dd>
   <dt>Sep 2015</dt>
   <dd>
-  	Holiday bargaining program project<br/>
+  	<i>Holiday bargaining program project</i><br/>
   	Through WeChat, the buyers forward the program to their friends, who need clicking the button to bargain for the specified item, and the program cuts out part of the price at random.
   </dd>
   <dt>Jul 2015, Aug 2015</dt>
   <dd>
-  	The ChunJi Micro Mall project<br/>
+  	<i>The ChunJi Micro Mall project</i><br/>
   	It’s a mall system, developed using the Struts2 and JDBC framework. Through collaboration, work with another to complete the development.
   </dd>
 </dl>
@@ -50,15 +50,15 @@ picture: nike
 <dl class="dl-horizontal">
   <dt>Apr 2016, May 2016</dt>
   <dd>
-  	The WeChat Medical System project
+  	<i>The WeChat Medical System project</i>
   </dd>
   <dt>Apr 2016</dt>
   <dd>
-  	Teaching Management System project
+  	<i>Teaching Management System project</i>
   </dd>
   <dt>Jul 2015, Sep 2015</dt>
   <dd>
-  	The Power Construction Corporation of Chongqing project
+  	<i>The Power Construction Corporation of Chongqing project</i>
   </dd>
 </dl>
   
