--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@ picture: nike
   </dd>
   <dt>Aug 2016, Sep 2016</dt>
   <dd>
-  	<i>The AITouJiang based <a href="https://admin.wechat.com/">Wechat Official Account</a></i><br/>
+  	<i>The AITouJiang based on <a href="https://admin.wechat.com/">Wechat Official Account</a></i><br/>
   	From drawing up a plan, requirements analysis, prototype design, programming and testing up to deployed.
   </dd>
 </dl>
