--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@ picture: nike
       <a href="http://www.linkedin.com/in/yongbo-wang/">
         <img src="img/ico/linkedin.png" alt=""/>
        LinkedIn</a><br/>
+      <a href="https://yongbowin.github.io/">
+        <img src="img/ico/homepage.png" alt=""/>
+       Homepage</a>: https://yongbowin.github.io<br/>
     </div>
   </div>
 </div>
@@ -33,6 +36,7 @@ picture: nike
 <h4>Biography</h4>
 <p>
 I'm a M.S. student at the 
+<a href="http://www.cs.cqu.edu.cn/">School of Software Theory and Technology Chongqing Key Lab</a>, 
 <a href="http://www.cs.cqu.edu.cn/">Department of Computer Science and Technology</a>, 
 <a href="http://english.cqu.edu.cn/">Chongqing University (CQU)</a>, under the supervision of Prof. 
 <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since Fall 2015. Previously, I received my bachelor degree in Chongqing University (CQU) in June, 2015.
@@ -48,7 +52,7 @@ My research interests include natural language processing, machine learning and 
 
 <h4>Recent Highlights</h4>
 <blockquote>
-Note: both <i>Yongbo Wang</i> and <i>YongBuo Wang</i> are my names.
+Note: Both <i>Yongbo Wang</i> and <i>YongBuo Wang</i> are my names.
 </blockquote>
 {% for post in site.papers %}
   {% include paper.html paper=post %}
