--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ picture: nike
         <a href="http://www.cs.cqu.edu.cn/">College of Computer Science</a><br/>
         <a href="http://english.cqu.edu.cn/">Chongqing University</a><br/>
         <a href="https://en.wikipedia.org/wiki/Chongqing">Shapingba District, Chongqing, China</a><br/>
+        [ <a href="https://en.wikipedia.org/wiki/Project_211">Project 211</a> and 
+        <a href="https://en.wikipedia.org/wiki/Project_985">Project 985</a> members ]<br/>
+        <a href="https://en.wikipedia.org/wiki/Chongqing">[ Computer science of Chongqing University is the top 1% in the Essential Science Indicators (ESI) ]</a><br/>
       </address>
     </div>
     <div class="col-sm-4">
