--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ I'm a M.S. student at the
 <p>
 <a href="CV/CV_Yongbo Wang.pdf"><strong class="color-blue">My Resume/CV.</strong></a>
 </p>
+<p>
+Thanks for visiting!
+</p>
 
 <h4>Research Interests</h4>
 <P>
