--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ I'm a M.S. student at the
 <a href="http://www.cs.cqu.edu.cn/">School of Software Theory and Technology Chongqing Key Lab</a>, 
 <a href="http://www.cs.cqu.edu.cn/">Department of Computer Science and Technology</a>, 
 <a href="http://english.cqu.edu.cn/">Chongqing University (CQU)</a>, under the supervision of Prof. 
-<a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since Fall 2015. Previously, I received my bachelor degree in Chongqing University (CQU) in June, 2015.
+<a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in Chongqing University (CQU) in June, 2015.
 </p>
 <p>
 <a href="CV/CV_Yongbo Wang.pdf"><strong class="color-blue">My Resume/CV.</strong></a>
@@ -56,6 +56,14 @@ Thanks for visiting!
 <P>
 My research interests include natural language processing, machine learning and deep learning.
 </P>
+
+<h4>News!</h4>
+<p>
+Two weeks ago, our group (I was the team leader, my in this competition nickname is Boson) now our team successfully entered the quarter-final. In the second submission, our group won the 
+<a href="http://www.datadreams.org/race-list-4.html"><strong>Top1</strong></a> of 
+<a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> in the 
+<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>. And this competition is in progress. This is one of the competitions about machine learning and NLP in China.
+</p>
 
 <h4>Recent Highlights</h4>
 <blockquote>
