--- a/index.html
+++ b/index.html
@@ -59,10 +59,14 @@ My research interests include natural language processing, machine learning and 
 
 <h4>News!</h4>
 <p>
-Two weeks ago, our group (I was the team leader, my in this competition nickname is Boson) now our team successfully entered the quarter-final. In the second submission, our group won the 
-<a href="http://www.datadreams.org/race-list-4.html"><strong>Top1</strong></a> of 
-<a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> in the 
-<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>. And this competition is in progress. This is one of the competitions about machine learning and NLP in China.
+Two weeks ago, our group (I was the team leader, my in this competition nickname is Boson) entered the quarter-final successfully, in the 
+<a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of 
+<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>.
+</p>
+<p>
+In the second submission, our group won the 
+<a href="http://www.datadreams.org/race-list-4.html"><strong>Top1</strong></a>. 
+The competition is in progress. This is one of the competitions about machine learning and NLP in China.
 </p>
 
 <h4>Recent Highlights</h4>
