--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Two weeks ago, our group (I was the team leader, my in this competition nickname
 </p>
 <p>
 In the second submission, our group won the 
-<a href="http://www.datadreams.org/race-list-4.html"><strong>Top1</strong></a>. 
+<a href="http://www.datadreams.org/race-list-4.html"><strong class="color-blue">Top1</strong></a>. 
 The competition is in progress. This is one of the competitions about machine learning and NLP in China.
 </p>
 
