--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@ My research interests include natural language processing, machine learning and 
 <p>
 Two weeks ago, our group (I was the team leader, my in this competition nickname is Boson) entered the quarter-final successfully, in the 
 <a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of 
-<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>.
-</p>
-<p>
-In the second submission, our group won the 
+<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>. In the second submission, our group won the 
 <a href="http://www.datadreams.org/race-list-4.html"><strong class="color-blue">Top1</strong></a>. 
 The competition is in progress. This is one of the competitions about machine learning and NLP in China.
 </p>
