--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Thanks for visiting!
 My research interests include natural language processing, machine learning and deep learning.
 </P>
 
-<h4>News!</h4>
+<h4><span style="color: red;">News!</span></h4>
 <p>
 Two weeks ago, our group (I was the team leader, my in this competition nickname is Boson) entered the quarter-final successfully, in the 
 <a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of 
