--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@ I'm a M.S. student at the
 <a href="CV/CV_Yongbo Wang.pdf"><strong class="color-blue">My Resume/CV.</strong></a>
 </p>
 <p>
+Although I majored in Cloud Computing during my master's degree, I have a strong interest in Natural Language Processing and Machine Learning, and have been working the Machine Learning & NLP group of 
+<a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a> as an <strong>intern for over one year</strong> in Shenzhen, China. During my internship, I have done much research work on the topics of it.
+</p>
+<p>
 Thanks for visiting!
 </p>
 
@@ -99,7 +103,7 @@ Note: Both <i>Yongbo Wang</i> and <i>YongBuo Wang</i> are my names.
 
 <h4>Personal</h4>
 <p>
-Machine Learning and Natural Language Processing (NLP) professional with <strong>over 1 year of internship experience</strong>. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. Title of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a>. Strong background in programming.
+Machine Learning and Natural Language Processing (NLP) professional with over 1 year of internship experience. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. Title of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a>. Strong background in programming.
 </p>
 <p>
 Excellent written and verbal communication skills. Demonstrated team player. Work well with a multicultural and diverse work force. Thrives in collaborative environments.
