--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@ picture: nike
   </div>
 </div>
 
+<h4>
+Welcome Yongbo's homepage.
+<h4>
+
 <h4>Biography</h4>
 <p>
 I'm a M.S. student at the 
@@ -49,14 +53,16 @@ I'm a M.S. student at the
 <a href="CV/CV_Yongbo Wang.pdf"><strong class="color-blue">My Resume/CV.</strong></a>
 </p>
 <p>
-Although I majored in Cloud Computing during my master's degree, I have a strong interest in Natural Language Processing and Machine Learning, and have been working the Machine Learning & NLP group of 
-<a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a> as an <strong>intern for over one year</strong> in Shenzhen, China. During my internship, I have done much research work on the topics of it.
-</p>
-<p>
 Thanks for visiting!
 </p>
 
 <h4>Research Interests</h4>
+<blockquote>
+<i>
+Although I majored in Cloud Computing during my master's degree, I have a strong interest in Natural Language Processing and Machine Learning, and have been working the Machine Learning & NLP group of 
+<a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a> as an <strong>intern for over one year</strong> in Shenzhen, China. During my internship, I have done much research work on the topics of it.
+</i>
+</blockquote>
 <P>
 My research interests include natural language processing, machine learning and deep learning.
 </P>
