--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ picture: nike
   </div>
 </div>
 
-<h4>
-Welcome Yongbo's homepage.
-<h4>
+<h5>
+<span style="color: #000;">Welcome Yongbo's homepage.</span>
+<h5>
 
 <h4>Biography</h4>
 <p>
@@ -64,7 +64,7 @@ Although I majored in Cloud Computing during my master's degree, I have a strong
 </i>
 </blockquote>
 <P>
-My research interests include natural language processing, machine learning and deep learning.
+My research interests include Natural Language Processing, Machine Learning and Deep Learning.
 </P>
 
 <h4><span style="color: red;">News!</span></h4>
