--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Note: Both <i>Yongbo Wang</i> and <i>YongBuo Wang</i> are my names.
 
 <h4>Personal</h4>
 <p>
-Machine Learning and Natural Language Processing (NLP) professional with over 1 year of internship experience. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. Title of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a>. Strong background in programming.
+Strong background in programming. With great research enthusiasm and ambition. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. In addition, I got the certificate of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a> in May 2014. 
 </p>
 <p>
 Excellent written and verbal communication skills. Demonstrated team player. Work well with a multicultural and diverse work force. Thrives in collaborative environments.
