--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@ picture: nike
 </div>
 
 <h5>
-<span style="color: #000;">Welcome Yongbo's homepage.</span>
+<span style="color: #527bbd;"><strong>Welcome Yongbo's homepage.</strong></span>
 <h5>
 
 <h4>Biography</h4>
 <p>
 I'm a M.S. student at the 
 <a href="http://www.cs.cqu.edu.cn/">School of Software Theory and Technology Chongqing Key Lab</a>, 
-<a href="http://www.cs.cqu.edu.cn/">Department of Computer Science and Technology</a>, 
-<a href="http://english.cqu.edu.cn/">Chongqing University (CQU)</a>, under the supervision of Prof. 
+Department of Computer Science and Technology, 
+Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the supervision of Prof. 
 <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in Chongqing University (CQU) in June, 2015.
 </p>
 <p>
@@ -58,10 +58,12 @@ Thanks for visiting!
 
 <h4>Research Interests</h4>
 <blockquote>
-<i>
-Although I majored in Cloud Computing during my master's degree, I have a strong interest in Natural Language Processing and Machine Learning, and have been working the Machine Learning & NLP group of 
-<a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a> as an <strong>intern for over one year</strong> in Shenzhen, China. During my internship, I have done much research work on the topics of it.
-</i>
+  <span style="font-size: 10px; font-style: italic; color: #999;">
+    <i>
+      Although I majored in Cloud Computing during my master's degree, I have a strong interest in Natural Language Processing and Machine Learning, and have been working the Machine Learning & NLP group of 
+      <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a> as an <strong>intern for over one year</strong> in Shenzhen, China. During my internship, I have done much research work on the topics of it.
+    </i>
+  </span>
 </blockquote>
 <P>
 My research interests include Natural Language Processing, Machine Learning and Deep Learning.
@@ -78,7 +80,9 @@ The competition is in progress. This is one of the competitions about machine le
 
 <h4>Recent Highlights</h4>
 <blockquote>
-Note: Both <i>Yongbo Wang</i> and <i>YongBuo Wang</i> are my names.
+  <span style="font-size: 10px; font-style: italic; color: #999;">
+    Note: Both <i>Yongbo Wang</i> and <i>YongBuo Wang</i> are my names.
+  </span>
 </blockquote>
 {% for post in site.papers %}
   {% include paper.html paper=post %}
