--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
 <a href="CV/CV_Yongbo Wang.pdf"><strong class="color-blue">My Resume/CV.</strong></a>
 </p>
 <p>
-Thanks for visiting!
+Thank you for visiting.
 </p>
 
 <h4>Research Interests</h4>
@@ -61,7 +61,9 @@ Thanks for visiting!
   <span style="font-size: 10px; font-style: italic; color: #999;">
     <i>
       Although I majored in Cloud Computing during my master's degree, I have a strong interest in Natural Language Processing and Machine Learning, and have been working the Machine Learning & NLP group of 
-      <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a> as an <strong>intern for over one year</strong> in Shenzhen, China. During my internship, I have done much research work on the topics of it.
+      <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a> as an 
+      <strong class="color-blue">intern for over one year</strong> 
+      in Shenzhen, China. During my internship, I have done much research work on the topics of it.
     </i>
   </span>
 </blockquote>
