--- a/index.html
+++ b/index.html
@@ -47,13 +47,10 @@ I'm a M.S. student at the
 <a href="http://www.cs.cqu.edu.cn/">School of Software Theory and Technology Chongqing Key Lab</a>, 
 Department of Computer Science and Technology, 
 Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the supervision of Prof. 
-<a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in Chongqing University (CQU) in June, 2015.
+<a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in CQU in June, 2015.
 </p>
 <p>
 <a href="CV/CV_Yongbo Wang.pdf"><strong class="color-blue">My Resume/CV.</strong></a>
-</p>
-<p>
-Thank you for visiting.
 </p>
 
 <h4>Research Interests</h4>
@@ -73,11 +70,11 @@ My research interests include Natural Language Processing, Machine Learning and 
 
 <h4><span style="color: red;">News!</span></h4>
 <p>
-Two weeks ago, our group (I was the team leader, my in this competition nickname is Boson) entered the quarter-final successfully, in the 
-<a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of 
-<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>. In the second submission, our group won the 
+In the second submission, our group won the 
 <a href="http://www.datadreams.org/race-list-4.html"><strong class="color-blue">Top1</strong></a>. 
-The competition is in progress. This is one of the competitions about machine learning and NLP in China.
+The competition is in progress. Two weeks ago, our group (I was the team leader, my in this competition nickname is Boson) entered the quarter-final successfully, in the 
+<a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of 
+<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>. This is one of the competitions about machine learning and NLP in China.
 </p>
 
 <h4>Recent Highlights</h4>
@@ -119,4 +116,7 @@ Strong background in programming. With great research enthusiasm and ambition. G
 </p>
 <p>
 Excellent written and verbal communication skills. Demonstrated team player. Work well with a multicultural and diverse work force. Thrives in collaborative environments.
+</p>
+<p>
+Thank you for visiting.
 </p>
