--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@ My research interests include Natural Language Processing, Machine Learning and 
 
 <h4><span style="color: red;">News!</span></h4>
 <p>
-In the second submission, our group won the 
-<a href="http://www.datadreams.org/race-list-4.html"><strong class="color-blue">Top1</strong></a>. 
-The competition is in progress. Two weeks ago, our group (I was the team leader, my in this competition nickname is Boson) entered the quarter-final successfully, in the 
+Our team won 
+<a href="http://www.datadreams.org/race-list-4.html"><strong class="color-blue">
+the first place 
+</strong></a> 
+in the 
 <a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of 
-<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>. This is one of the competitions about machine learning and NLP in China.
+<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a> in the second submission. I was the team leader, my nickname is Boson in this competition. This is one of the competitions about machine learning and NLP in China. And the competition is in progress. We entered the quarter-final successfully. 
 </p>
 
 <h4>Recent Highlights</h4>
