--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ picture: nike
 </div>
 
 <h5>
-<span style="color: #527bbd;"><strong>Welcome Yongbo's homepage.</strong></span>
+<!-- <span style="color: #527bbd;"><strong>Welcome Yongbo's homepage.</strong></span> -->
+Welcome Yongbo's homepage.
 <h5>
 
 <h4>Biography</h4>
@@ -93,7 +94,7 @@ in the
 <ul>
   <li>
     <span class="color-blue">Research Intern | 
-    <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a>, Shenzhen, China</span><br/>
+    Aizhihui Technology Co., Ltd., Shenzhen, China</span><br/>
     <strong>Topic:</strong> Machine Learning and NLP<br/>
     Jul 2016 - present
   </li>
