--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ picture: nike
   </div>
 </div>
 
-<h5>
+<p>
 <!-- <span style="color: #527bbd;"><strong>Welcome Yongbo's homepage.</strong></span> -->
 Welcome Yongbo's homepage.
-<h5>
+</p>
 
 <h4>Biography</h4>
 <p>
@@ -94,7 +94,9 @@ in the
 <ul>
   <li>
     <span class="color-blue">Research Intern | 
-    Aizhihui Technology Co., Ltd., Shenzhen, China</span><br/>
+    <a href="http://www.aitech.xin">
+      <span class="color-blue">Aizhihui Technology Co., Ltd.</span>
+    </a>, Shenzhen, China</span><br/>
     <strong>Topic:</strong> Machine Learning and NLP<br/>
     Jul 2016 - present
   </li>
